<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_delete">supprimer</string>
    <string name="prompt">Jour de cotisation</string>
    <string name="app_name">iDjangui</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_app">App</string>
    <string name="full_name">Name</string>
    <string name="sms_information">Hello ! Entrer votre numero de telephone. Vous allez recevoir un SMS de confirmation</string>
    <string name="plus">+</string>
    <string name="prompt_phone">phone</string>
    <string name="sms_wait_code">Entrer le code que vous avez reçu par SMS</string>
    <string name="prompt_codeSMS">code</string>
    <string name="text_reinter_phone_number">vous avez pas reçu de SMS? ressaisissez votre numéro de téléphone</string>
    <string name="title_activity_tontine">TontineActivity</string>
    <string name="title_activity_creer_tontine">CreerTontineActivity</string>
    <string name="title_activity_demande_soutient">DemandeSoutientActivity</string>
    <string name="motif">Motif :</string>
    <string name="write_motif">Entrez le motif</string>
    <string name="ville_tontine">Ville</string>
    <string name="montant_cotisation">Montant à cotiser</string>
    <string name="nom_tontine">Nom de la Tontine</string>
    <string name="description_tontine">information relative a la tontine</string>
    <string name="nb_beneficiaire">Nombre se bénéficiaire</string>
    <string name="jour_tontine">Jour de Tontine :</string>
    <string name="action_done">done</string>
    <string name="send">send mow</string>
    <string name="action_soutient">Demande de soutient</string>
    <string name="action_membres">Les membres</string>
    <string name="action_ajoutmembre">Ajouter un membre</string>
    <string name="action_annonce">Annonces</string>
    <string name="logo_tontine">logo de la tontine</string>
    <string name="nom1">Association des étudiants Bamilékés.</string>
    <string name="desciption1">Cette association a pour but de contribuer à l\'éducation de leurs membres.</string>
    <string name="poste1"></string>
    <string name="nom2">Association des jeunes agriculteurs de Bafang.</string>
    <string name="desciption2">Cette association a pour but de développer l\'agriculture dans leur communauté.</string>
    <string name="poste2"></string>
    <string name="nom3">Centre culturel des jeunes  Bagangté.</string>
    <string name="desciption3">Ce centre a pour objectif de promouvoir de développement de Bagangte.</string>
    <string name="poste3"></string>
    <string name="nom4">Foyer social Bafou.</string>
    <string name="desciption4">Garantir le développement de notre communauté est notre priorité.</string>
    <string name="poste4"></string>
    <string name="no_internet">Erreur réseau !</string>
    <string name="recommend_to_friends">Partager avec des Amis via…</string>
    <string name="text_to_share_with_friends">Rejoiner moi sur Djangui. L\'application qui permet de faire la Tontine. Télécharger à cette adresse: http://djangui.com/app</string>
    <string name="action_share">Partager</string>
    <string name="title_activity_annonce">AnnonceActivity</string>
    <string name="empty_list">Aucune Tontine disponible, glissez vers le bas pour rafraichir ou cliquez sur le button + pour créer une tontine.</string>
    <string name="title_activity_info_tontine">InfoTontineActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="login">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="action_notification">Notifications</string>
    <string name="infos">Infos</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_login_activity1">LoginActivity1</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="action_add">add</string>
    <string name="empty_session">Aucune session disponibe. Glisser vers le bas pour rafraichir!</string>
    <string name="title_activity_creer_session">CreerSessionActivity</string>
    <string name="closesession">Fermer la session</string>
    <string name="action_cotiser">Cotiser</string>
    <string name="title_activity_cotiser">CotiserActivity</string>
    <string name="title_activity_compte">CompteActivity</string>
    <string name="action_compte">Solde du compte</string>
    <string name="title_activity_info_session">InfoSessionActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="text_send_feedback">We would love to hear what you think about Djangui . Good or bad ?</string>
    <string name="thanks_feedback">Thank\'s for your feedback ;)</string>
    <string name="empty_list2">Aucune Tontine disponible, glissez vers le bas pour rafraichir.</string>
    <string name="action_logout">Deconnexion</string>
    <string name="action_fermer">Fermer la session</string>
    <string name="title_activity_creer_annonce">CreerAnnonceActivity</string>
    <string name="title_activity_ajout_membre">AjoutMembre</string>
    <string name="title_activity_list_membre">ListMembreActivity</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_creer_tontine1">Etape 1/2</string>
    <string name="title_activity_creer_tontine_amande">CreerTontineAmande</string>
    <string name="title_activity_creer_tontine2">Etape 2/2</string>
    <string name="title_activity_register_step2">RegisterStep2</string>
    <string name="title_activity_register_step1">RegisterStep1</string>
    <string name="title_activity_register_final_step">RegisterFinalStep</string>
    <string name="title_activity_tontine_setting">TontineSetting</string>
    <string name="title_activity_tontiner">TontinerActivity</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_check_cahier">CheckCahierActivity</string>
    <string name="title_activity_floating_menus">FloatingMenusActivity</string>

</resources>
