<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.parse.app.SessionActivity">
    <!--<item android:id="@+id/soutient" android:title="@string/action_soutient"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/notification" android:title="@string/action_notification"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/annonce" android:title="@string/action_annonce"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/membres" android:title="@string/action_membres"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add"/>-->
</menu>
