<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_moncompte" android:title="@string/action_compte"
        android:orderInCategory="100" app:showAsAction="never" />
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="search"/>
</menu>
