<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="tv.djoss.app.RegisterActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/frame1"
        android:layout_marginBottom="18dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_tontine"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/evernote_footer_text"
            android:singleLine="true"
            android:layout_marginBottom="15dp">

        </EditText>

        <EditText
            android:id="@+id/ville_tontine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ville_tontine"
            android:textColor="@color/evernote_footer_text"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxLength="18"
            android:singleLine="true"
            android:layout_marginBottom="15dp">
        </EditText>

        <EditText
            android:id="@+id/montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/montant_cotisation"
            android:maxLines="1"
            android:inputType="number"
            android:textSize="15sp"
            android:textColor="@color/evernote_footer_text"
            android:maxLength="18"
            android:singleLine="true"
            android:layout_marginBottom="15dp">
        </EditText>
       <EditText
            android:id="@+id/nb_beneficiaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nb_beneficiaire"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/evernote_footer_text"
            android:maxLength="18"
            android:singleLine="true"
            android:layout_marginBottom="15dp">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/jour_tontine"/>
        <Spinner
            android:id="@+id/jour_tontine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/prompt"
            android:entries="@array/jours_tontines"
            android:theme="@style/mySpinner"
            >
        </Spinner>
        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description_tontine"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:maxLength="600"
            android:paddingBottom="11dp"
            android:paddingLeft="6dp"
            android:paddingEnd="12dp"
            android:textColor="@color/evernote_footer_text"
            android:paddingRight="12dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/gris"
            android:textSize="15sp" >
        </EditText>

    </LinearLayout>
</ScrollView>
</LinearLayout>
